tests/fail/parser-import4.dit
import Test from "https://notadomain.githubusercontent.com/";

A {}